fix: fix overflowing modals

--- a/css/default.css
+++ b/css/default.css
@@ -140,6 +140,8 @@ body { background-color: #f7fcf7;}
   top: calc(100vh / 2);
   left: calc(100vw / 2);
   transform: translate(-50%, -50%);
+  max-height: calc(100vh - 50px);
+  overflow-y: scroll;
   z-index: 1000;
 }
 
